not-helm/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:25.0.3-apache
          name: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-storage
            - mountPath: /mnt/data
              name: nextcloud-storage-nfs
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
        - name: nextcloud-storage-nfs
          persistentVolumeClaim:
            claimName: nextcloud-pvc-nfs
